# SnapATAC2

./: .buildinfo  .gitattributes  .gitignore  CNAME  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  changelog.html  develop.html  genindex.html  index.html  install.html  pyproject.toml  references.html  search.html  searchindex.js
.doctrees/: changelog.doctree  develop.doctree
.doctrees/__intersphinx_cache__/: anndata_objects.inv  scanpy_objects.inv
.doctrees/api/: datasets.doctree  export.doctree  index.doctree  motif.doctree  preprocessing.doctree  tools.doctree
.doctrees/api/_autosummary/: snapatac2.AnnData.close.doctree  snapatac2.AnnData.copy.doctree  snapatac2.AnnData.doctree  snapatac2.AnnData.filename.doctree  snapatac2.AnnData.is_closed.doctree  snapatac2.AnnData.n_vars.doctree  snapatac2.AnnData.obs_names.doctree  snapatac2.AnnData.open.doctree  snapatac2.AnnData.to_memory.doctree  snapatac2.AnnData.uns.doctree  snapatac2.AnnDataSet.X.doctree  snapatac2.AnnDataSet.backend.doctree  snapatac2.AnnDataSet.chunked_X.doctree  snapatac2.AnnDataSet.close.doctree  snapatac2.AnnDataSet.doctree  snapatac2.AnnDataSet.isbacked.doctree  snapatac2.AnnDataSet.obs.doctree  snapatac2.AnnDataSet.obsp.doctree  snapatac2.AnnDataSet.to_adata.doctree  snapatac2.AnnDataSet.uns.doctree  snapatac2.AnnDataSet.var.doctree  snapatac2.AnnDataSet.var_names.doctree  snapatac2.AnnDataSet.varm.doctree  snapatac2.AnnDataSet.varp.doctree  snapatac2.PyDNAMotif.doctree  snapatac2.PyDNAMotif.info_content.doctree  snapatac2.PyDNAMotif.name.doctree  snapatac2.PyDNAMotifScanner.find.doctree  (+47 more)
.doctrees/tutorials/: diff.doctree
.github/workflows/: nightly.yml  test_python.yml  wheels.yml
api/: export.html  index.html  io.html  metrics.html  plotting.html  recipes.html
api/_autosummary/: snapatac2.AnnData.X.html  snapatac2.AnnData.backend.html  snapatac2.AnnData.close.html  snapatac2.AnnData.copy.html  snapatac2.AnnData.filename.html  snapatac2.AnnData.is_closed.html  snapatac2.AnnData.n_obs.html  snapatac2.AnnData.n_vars.html  snapatac2.AnnData.obs_ix.html  snapatac2.AnnData.obs_names.html  snapatac2.AnnData.obsm.html  snapatac2.AnnData.obsp.html  snapatac2.AnnData.open.html  snapatac2.AnnData.shape.html  snapatac2.AnnData.split_obs_by.html  snapatac2.AnnData.subset.html  snapatac2.AnnData.uns.html  snapatac2.AnnData.var.html  snapatac2.AnnData.var_names.html  snapatac2.AnnData.varm.html  snapatac2.AnnData.varp.html  snapatac2.AnnData.write.html  snapatac2.AnnDataSet.adatas.html  snapatac2.AnnDataSet.backend.html  snapatac2.AnnDataSet.chunked_X.html  snapatac2.AnnDataSet.close.html  snapatac2.AnnDataSet.html  snapatac2.AnnDataSet.isbacked.html  snapatac2.AnnDataSet.n_obs.html  snapatac2.AnnDataSet.obs.html  snapatac2.AnnDataSet.obs_ix.html  snapatac2.AnnDataSet.obsm.html  snapatac2.AnnDataSet.uns.html  snapatac2.AnnDataSet.var_names.html  snapatac2.AnnDataSet.varm.html  snapatac2.PyDNAMotif.family.html  snapatac2.PyDNAMotif.html  snapatac2.PyDNAMotif.id.html  snapatac2.PyDNAMotif.info_content.html  snapatac2.PyDNAMotifScanner.exist.html  (+55 more)
docs/: changelog.md  conf.py
docs/api/: plotting.rst
docs/tutorials/: annotation.ipynb  diff.ipynb  pbmc.ipynb
scripts/: build_dist.sh  generate_llms_txt.py  llms_template.txt
snapatac2/: __init__.py  _io.py  _utils.py  datasets.py
snapatac2-contrib/: setup.py
snapatac2-core/: Cargo.toml
snapatac2-core/benches/: benchmark.rs
snapatac2-core/src/: embedding.rs  export.rs  genome.rs  motif.rs
snapatac2-core/src/feature_count/: aggregator.rs  counter.rs  data_iter.rs  matrix.rs  mod.rs
snapatac2-core/src/preprocessing/: bam.rs  import.rs  mod.rs  qc.rs
snapatac2-core/src/preprocessing/bam/: flagstat.rs  mark_duplicates.rs
snapatac2-core/src/utils/: mod.rs
snapatac2-python/: Cargo.toml  README.md  pyproject.toml
snapatac2-python/python/snapatac2/plotting/: __init__.py
snapatac2-python/python/snapatac2/preprocessing/: __init__.py  _basic.py
snapatac2-python/python/snapatac2_scooby/: __init__.py  _io.py  _utils.py  datasets.py  genome.py
snapatac2-python/python/snapatac2_scooby/export/: __init__.py
snapatac2-python/python/snapatac2_scooby/metrics/: __init__.py
snapatac2-python/python/snapatac2_scooby/plotting/: __init__.py  _base.py  _network.py
snapatac2-python/python/snapatac2_scooby/preprocessing/: _basic.py  _harmony.py  _knn.py  _mnn_correct.py  _recipe.py  _scanorama.py  _scrublet.py
snapatac2-python/python/snapatac2_scooby/tools/: _call_peaks.py  _clustering.py  _diff.py  _embedding.py  _integration.py  _misc.py  _motif.py  _network.py  _smooth.py
snapatac2-python/src/: call_peaks.rs  embedding.rs  lib.rs  preprocessing.rs  utils.rs
snapatac2-python/src/utils/: anndata.rs
snapatac2-python/tests/: test_func.py  test_pipeline.py  test_similarity.py  test_tools.py
snapatac2-python/tests/test_idf/: Cargo.toml  README.md
snapatac2-python/tests/test_idf/src/: main.rs
snapatac2-python/tests/test_tools/: test_minus.bw  test_minus.h5ad  test_plus.bw  test_plus.h5ad  test_stranded.bam
snapatac2/examples/: atlas.md  modality.md
snapatac2/export/: __init__.py
snapatac2/metrics/: __init__.py
snapatac2/plotting/: __init__.py  _base.py  _network.py
snapatac2/preprocessing/: __init__.py  _basic.py  _cell_calling.py  _harmony.py  _import_data.py  _knn.py  _mnn_correct.py  _recipe.py  _scanorama.py  _scrublet.py
snapatac2/tools/: __init__.py  _call_peaks.py  _clustering.py  _diff.py  _embedding.py  _integration.py  _misc.py  _motif.py  _network.py  _smooth.py
src/: call_peaks.rs  embedding.rs  export.rs  lib.rs  motif.rs  preprocessing.rs
src/utils/: anndata.rs  mod.rs
test_script/: test.py
tests/: test_func.py  test_pipeline.py  test_tools.py
tests/test_tools/: test.bam
tutorials/: atlas.html  hic.html  integration.html  modality.html
version/2.9/: changelog.html  genindex.html  index.html  objects.inv  references.html  searchindex.js
version/dev/: .buildinfo  changelog.html  develop.html  genindex.html  index.html  install.html  objects.inv  references.html  search.html  searchindex.js
(+643 files in other folders)
