[project]
name = "snapatac2"
authors = [
    {name = "Kai Zhang", email = "zhangkai33@westlake.edu.cn"}
]
maintainers = [
    {name = "Kai Zhang", email = "zhangkai33@westlake.edu.cn"}
]
description = "SnapATAC2: Single-cell epigenomics analysis pipeline"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10, <3.15"
dynamic = ["version"]

dependencies = [
    'anndata >= 0.8.0',
    'kaleido',
    'multiprocess',
    'MACS3 >= 3.0.3, < 3.1',
    'natsort', 
    'numpy >= 2.0.0, < 3.0.0',
    'pandas >= 2.2.0, < 3.0.0',
    'plotly >= 5.19.0, < 7.0.0',
    'polars >= 1.0, < 2.0',
    'pooch >= 1.6.0, < 2.0.0',
    'igraph >= 0.10.3',
    'pyarrow',
    'pyfaidx >= 0.7.0, < 0.9.0',
    'rustworkx',
    'scipy >= 1.4, < 2.0.0',
    'scikit-learn >= 1.0, < 2.0.0',
    'tqdm >= 4.62',
    'typeguard >= 4.0',
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "snapatac2._snapatac2"

[project.urls]
Homepage = "https://scverse.org/SnapATAC2/index.html"
Documentation = "https://scverse.org/SnapATAC2/index.html"
Repository = "https://scverse.org/SnapATAC2/"
Issues = "https://github.com/scverse/SnapATAC2/issues"
Changelog = "https://scverse.org/SnapATAC2/version/dev/changelog.html"

[project.optional-dependencies]
recommend = [
    "harmonypy>=0.0.9",
    "xgboost>=1.4",
    "umap-learn>=0.5.0",
    "scanpy>=1.9",
    "scikit-misc>=0.1.3",
    "magic-impute>=2.0",
]

[dependency-groups]
dev = [
  {include-group = "test"},
]

# For scverse/integration-testing
test = [
  "pytest >=8.1.1,<9",
  "hypothesis >=6.72.4,<7",
]

docs = [
  "sphinx >8.0.0,<9",
  "pydata-sphinx-theme >0.16.0,<0.17",
  "pandoc",
  "nbsphinx",
  "Pygments",
  "sphinx-autodoc-typehints",
  "myst-parser >4.0.0,<5",
  "markupsafe >3.0.0,<4",
  "sphinx-plotly-directive",
]
