[package]
name = "snapatac2-core"
version = "2.1.0"
edition = "2021"
authors = ["Kai Zhang <zhangkai33@westlake.edu.cn>"]
description = "Rust APIs"
license = "MIT"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["single-cell", "biology"]

[dependencies]
#anndata = "0.6.2"
anndata = { git = "https://github.com/kaizhang/anndata-rs.git", rev = "5cb83f5005112aeb3c778409ca670a66cf59db64"}
anyhow = "1.0"
bstr = "1.12"
byteorder = "1.5"
bincode = { version = "2", features = ["derive"] }
bigtools = { version = "0.5", features = ["read", "write"] }
bed-utils = "0.9.2"
flate2 = "1.0"
tokio = "1.34"
hora = "0.1"
kdtree = "0.7"
itertools = "0.14"
indexmap = "2"
indicatif = { version = "0.18", features = ["rayon"] }
lexical = "7"
log = "0.4"
ndarray = { version = "0.16", features = ["rayon"] }
num = "0.4"
noodles = { version = "0.104", features = ["core", "fastq", "bam", "sam", "gff", "gtf"] }
nalgebra-sparse = "0.11"
polars = { version = "0.51", features = ["ndarray", "dtype-categorical"] }
rayon = "1.11"
regex = "1.11"
statrs = "0.18"
smallvec = "1.15"
sanitize-filename = "0.6"
tempfile = "3.3"
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "benchmark"
harness = false