[package]
name = "snapatac2"
version = "2.9.0-dev1"
edition = "2021"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["single-cell", "biology"]

[dependencies]
snapatac2-core = { workspace = true }
#anndata = "0.6.1"
anndata = { git = "https://github.com/kaizhang/anndata-rs.git", rev = "f712f9aaf523a6099e43ca521c3c0d65e6dd97df"}
#anndata-hdf5 = "0.5"
anndata-hdf5 = { git = "https://github.com/kaizhang/anndata-rs.git", rev = "f712f9aaf523a6099e43ca521c3c0d65e6dd97df"}
#anndata-zarr = "0.1"
anndata-zarr = { git = "https://github.com/kaizhang/anndata-rs.git", rev = "f712f9aaf523a6099e43ca521c3c0d65e6dd97df"}
#pyanndata = "0.5.1"
pyanndata = { git = "https://github.com/kaizhang/anndata-rs.git", rev = "f712f9aaf523a6099e43ca521c3c0d65e6dd97df"}
anyhow = "1.0"
bed-utils = "0.9.2"
flate2 = "1.0"
itertools = "0.14"
indicatif = "0.18"
linreg = "0.2"
log = "0.4"
noodles = { version = "0.100", features = ["bam", "sam"] }
numpy = "0.25"
num = "0.4"
nalgebra-sparse = "0.11"
nalgebra = "0.34"
ndarray = "0.16"
polars = { version = "0.49", features = ["ndarray", "dtype-categorical"] }
planus = { version = "=1.1.1" } # https://github.com/pola-rs/polars/issues/24208
pyo3-log = "0.12"
pyo3-polars = "0.22"
rand = "0.9"
rayon = "1.11"
statrs = "0.18"
sanitize-filename = "0.5"
tempfile = "3.3"
zstd = { version = "0.13", features = ["zstdmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {version = "0.6", features = ["disable_initial_exec_tls"]}

[dependencies.pyo3]
version = "0.25"
features = ["extension-module", "anyhow"]

[lib]
name = "snapatac2"
crate-type = ["cdylib"]
