[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "snapatac2._snapatac2"

[project]
name = "snapatac2"
authors = [
    {name = "Kai Zhang", email = "zhangkai33@westlake.edu.cn"},
    {name = "Laura Martens", email = "laura.d.martens@icloud.com"},
    {name = "Trevor Manz", email = "trevor.j.manz@gmail.com"},
]
maintainers = [
    {name = "Laura Martens", email = "laura.d.martens@icloud.com"},
]
description = "SnapATAC2-scooby: Single-cell epigenomics analysis pipeline with functionality for RNA-seq processing"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9, <3.14"
dynamic = ["version"]

dependencies = [
    'anndata >= 0.8.0, < 0.11.0',
    'kaleido',
    'multiprocess',
    'MACS3 >= 3.0.3, < 3.1',
    'natsort', 
    'numpy >= 1.16.0, < 3.0.0',
    'pandas >= 1.0, < 3.0.0',
    'plotly >= 5.19.0, < 6.0.0',
    'polars >= 1.0, < 2.0',
    'pooch >= 1.6.0, < 2.0.0',
    'igraph >= 0.10.3',
    'pyarrow',
    'pyfaidx >= 0.7.0, < 0.8.0',
    'rustworkx',
    'scipy >= 1.4, < 2.0.0',
    'scikit-learn >= 1.0, < 2.0.0',
    'tqdm >= 4.62',
    'typeguard >= 4.0',
]

[project.urls]
Homepage = "https://scooby.readthedocs.io/en/latest/"
Documentation = "https://scooby.readthedocs.io/en/latest/"
Repository = "https://scooby.readthedocs.io/en/latest/"
Issues = "https://github.com/kaizhang/SnapATAC2/issues"

[project.optional-dependencies]
recommend = [
    "scanorama>=1.7.3",
    "harmonypy>=0.0.9",
    "xgboost>=1.4",
    "umap-learn>=0.5.0",
    "scanpy>=1.9",
    "scvi-tools>=1.0",
    "scikit-misc>=0.1.3",
    "magic-impute>=2.0",
]
test = ["pytest", "hypothesis==6.72.4"]
